--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,13 +46,10 @@ services:
 
   proxy:
     image: nginx:1.13.6-alpine
+    build: ./nginx/
     container_name: nginx_proxy
     ports:
       - "8443:443"
-    volumes:
-      - ./conf/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./conf/tls/nginx.key:/etc/nginx/nginx.key:ro
-      - ./conf/tls/nginx.crt:/etc/nginx/nginx.crt:ro
     depends_on: [ conjur ]
 
   client:
