--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,17 +20,15 @@ services:
      - tmp/conf/nginx.key
      - -out
      - tmp/conf/nginx.crt
-    volumes:
-     - ./conf/tls/:/tmp/conf
   
   bot_app:
     image: cfmanteiga/alpine-bash-curl-jq
     privileged: true
     container_name: bot_app
     command: tail -F anything
-    volumes:
-    - ./program.sh:/tmp/program.sh
-     
+    environment:
+      BOT_APP_API_KEY:
+    
   database:
     image: postgres:9.4
     container_name: postgres_database
@@ -57,5 +55,4 @@ services:
     depends_on: [ proxy ]
     entrypoint: sleep
     command: infinity
-    volumes:
-    - ./conf/policy:/policy
+
