--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
      - tmp/conf/nginx.crt
   
   bot_app:
-    image: cfmanteiga/alpine-bash-curl-jq
+    build: ./botapp
     privileged: true
     container_name: bot_app
     command: tail -F anything
@@ -48,7 +48,7 @@ services:
     depends_on: [ conjur ]
 
   client:
-    image: cyberark/conjur-cli:5
+    build: ./client
     container_name: conjur_client
     depends_on: [ proxy ]
     entrypoint: sleep
